<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:id="@+id/contacts_developer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/developer_title"
        android:textSize="18sp"
        android:textColor="@color/gray_dark"
        android:textStyle="bold"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/contacts_developer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/developer_info"
        android:textSize="16sp"
        android:textColor="@color/gray_dark"

        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toBottomOf="@id/contacts_developer_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/contacts_developer_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/developer_link"
        android:textSize="16sp"
        android:textColor="@color/orange_primary"

        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toBottomOf="@id/contacts_developer_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/contacts_content_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/content_title"
        android:textSize="18sp"
        android:textColor="@color/gray_dark"
        android:textStyle="bold"

        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toBottomOf="@id/contacts_developer_link"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/contacts_content_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/content_info"
        android:textSize="16sp"
        android:textColor="@color/gray_dark"

        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toBottomOf="@id/contacts_content_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/contacts_contact_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/contact_title"
        android:textSize="18sp"
        android:textColor="@color/gray_dark"
        android:textStyle="bold"

        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toBottomOf="@id/contacts_content_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/contacts_contact_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/contact_info"
        android:textSize="16sp"
        android:textColor="@color/gray_dark"

        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toBottomOf="@id/contacts_contact_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/contacts_contact_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/contact_link"
        android:textColor="@color/orange_primary"
        android:textSize="16sp"

        android:layout_marginHorizontal="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contacts_contact_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>