<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@color/transparent"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/background_rounded_item"
        android:elevation="4dp"

        android:layout_margin="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/dialog_language_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/choose_language"
            android:textSize="16sp"
            android:textColor="@color/gray_dark"

            android:gravity="center"

            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_language_button_en"
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:text="@string/en"
            android:textColor="@color/orange_primary"
            android:textSize="14sp"
            android:textAllCaps="false"

            app:backgroundTint="@color/white"

            app:cornerRadius="24dp"
            app:rippleColor="@color/orange_light"

            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="16dp"

            app:layout_constraintTop_toBottomOf="@id/dialog_language_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_language_button_be"
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:text="@string/be"
            android:textColor="@color/orange_primary"
            android:textSize="14sp"
            android:textAllCaps="false"

            app:backgroundTint="@color/white"

            app:cornerRadius="24dp"
            app:rippleColor="@color/orange_light"

            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/dialog_language_button_en"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_language_button_ru"
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:text="@string/ru"
            android:textColor="@color/orange_primary"
            android:textSize="14sp"
            android:textAllCaps="false"

            app:backgroundTint="@color/white"

            app:cornerRadius="24dp"
            app:rippleColor="@color/orange_light"

            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"

            app:layout_constraintTop_toBottomOf="@id/dialog_language_button_be"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>