<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:ignore="ContentDescription"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/settings_image"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:src="@drawable/ic_app_logo"

        android:layout_marginTop="64dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_button_language"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textAllCaps="false"

        app:backgroundTint="@color/orange_primary"

        app:icon="@drawable/ic_language"
        app:iconGravity="textStart"
        app:iconTint="@color/white"

        app:cornerRadius="24dp"
        app:rippleColor="@color/gray_ripple"

        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="64dp"

        app:layout_constraintTop_toBottomOf="@id/settings_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_button_refresh"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:visibility="gone"

        android:text="@string/refresh_data"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textAllCaps="false"

        app:backgroundTint="@color/orange_primary"

        app:icon="@drawable/ic_refresh"
        app:iconGravity="textStart"
        app:iconTint="@color/white"

        app:cornerRadius="24dp"
        app:rippleColor="@color/gray_ripple"

        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/settings_button_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_button_contacts"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:text="@string/about_us"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textAllCaps="false"

        app:backgroundTint="@color/orange_primary"

        app:icon="@drawable/ic_info"
        app:iconGravity="textStart"
        app:iconTint="@color/white"

        app:cornerRadius="24dp"
        app:rippleColor="@color/gray_ripple"

        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/settings_button_refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>